# minecraft-ops-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: DEVELOPER_GUIDE.md  LIMITATIONS.md  RELEASE_CHECKLIST.md  TEST_REPORT_2026-04-14.md  USER_MANUAL.md
scripts/: mcp_integration_probe.py  msmp_temp_instance_probe.py  multi_server_backend_probe.py  quick_setup.py
src/minecraft_ops_mcp/: __init__.py  audit.py  config.py  errors.py  managed_backends.py  models.py  modpack.py  policy.py  server.py  tools.py
src/minecraft_ops_mcp/adapters/: __init__.py  mcsm.py  msmp.py  rcon.py
tests/: test_config_and_mcsm_safety.py  test_managed_backends.py  test_modpack.py  test_policy_and_schema.py  test_sdk_server.py  test_tool_catalog.py
